# clap

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  main.cpp
.github/workflows/: ci.yml  docs.yml  release.yml
examples/: calculator.cpp  encapsulated.cpp  file_processor.cpp  zappy_server.cpp
examples/calculator/: main.cpp
examples/choices/: main.cpp
examples/custom_help/: main.cpp
examples/custom_type/: main.cpp
examples/encapsulated/: Cli.cpp  Cli.hpp  main.cpp
examples/error_handling/: main.cpp
examples/fetchcontent/: CMakeLists.txt  main.cpp
examples/file_processor/: main.cpp
examples/greeter/: main.cpp
examples/idk/: main.cpp
examples/multi_option/: main.cpp
examples/no_auto_help/: main.cpp
examples/range/: main.cpp
examples/required_optional/: main.cpp
examples/separator/: main.cpp
examples/short_clusters/: main.cpp
examples/showcase/: main.cpp
examples/struct_args/: main.cpp
examples/zappy_server/: main.cpp
include/: clap.hpp
src/: App.cpp  App.hpp  ArgCursor.hpp  Argument.hpp  ClapExceptions.hpp  Flag.hpp  HelpFormatter.cpp  HelpFormatter.hpp  IArgument.hpp  MultiOption.hpp  Option.hpp  ParseValue.hpp  Positional.hpp  TypeNames.hpp  TypedArgument.hpp  ValueList.hpp
test/: clap_test.cpp
tests/: clap_tests.cpp
tools/: build_single_header.py
